--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -19,13 +19,9 @@ pre {
 }
 
 a {
-  color: #000;
-  &:visited {
-    color: #000;
-  }
+  color: black;
   &:hover {
-    color: #fff;
-    background-color: #000;
+  color:black
   }
 }
 
